==> ccli8/mbed-os/targets/TARGET_NUVOTON/TARGET_M480/qspi_api.c <==
#include "qspi_api.h"
#include "cmsis.h"
#include "pinmap.h"
#include "PeripheralPins.h"
#include "gpio_api.h"
#include "mbed_toolchain.h"
#include "nu_modutil.h"
#include "nu_miscutil.h"
#include "nu_bitutil.h"
#define NU_QSPI_FRAME_MIN   8
#define NU_QSPI_FRAME_MAX   32

qspi_status_t qspi_init(qspi_t *obj, PinName io0, PinName io1, PinName io2, PinName io3, PinName sclk, PinName ssel, uint32_t hz, uint8_t mode)
{
    // Determine which QSPI_x the pins are used for
    uint32_t qspi_data0 = pinmap_peripheral(io0, PinMap_QSPI_DATA0);
    uint32_t qspi_data1 = pinmap_peripheral(io1, PinMap_QSPI_DATA1);
    uint32_t qspi_data2 = pinmap_peripheral(io2, PinMap_QSPI_DATA2);
    uint32_t qspi_data3 = pinmap_peripheral(io3, PinMap_QSPI_DATA3);
    uint32_t qspi_sclk = pinmap_peripheral(sclk, PinMap_QSPI_SCLK);
    uint32_t qspi_ssel = pinmap_peripheral(ssel, PinMap_QSPI_SSEL);
    uint32_t qspi_data01 = pinmap_merge(qspi_data0, qspi_data1);
    uint32_t qspi_data23 = pinmap_merge(qspi_data2, qspi_data3);
    uint32_t qspi_data = pinmap_merge(qspi_data01, qspi_data23);
    uint32_t qspi_cntl = pinmap_merge(qspi_sclk, qspi_ssel);
    obj->qspi = (QSPIName) pinmap_merge(qspi_data, qspi_cntl);
    MBED_ASSERT((int)obj->qspi != NC);

    const struct nu_modinit_s *modinit = get_modinit(obj->qspi, qspi_modinit_tab);
    MBED_ASSERT(modinit != NULL);
    MBED_ASSERT(modinit->modname == (int) obj->qspi);

    obj->pin_data0 = io0;
    obj->pin_data1 = io1;
    obj->pin_data2 = io2;
    obj->pin_data3 = io3;
    obj->pin_sclk = sclk;
    obj->pin_ssel = ssel;

    pinmap_pinout(io0, PinMap_QSPI_DATA0);
    pinmap_pinout(io1, PinMap_QSPI_DATA1);
    pinmap_pinout(io2, PinMap_QSPI_DATA2);
    pinmap_pinout(io3, PinMap_QSPI_DATA3);
    pinmap_pinout(sclk, PinMap_QSPI_SCLK);
    pinmap_pinout(ssel, PinMap_QSPI_SSEL);

    // Select IP clock source
    CLK_SetModuleClock(modinit->clkidx, modinit->clksrc, modinit->clkdiv);

    // Enable IP clock
    CLK_EnableModuleClock(modinit->clkidx);

    // Reset this module
    SYS_ResetModule(modinit->rsetidx);

    // Mark this module to be inited.
    int i = modinit - qspi_modinit_tab;
    qspi_modinit_mask |= 1 << i;

    // IP base address
    QSPI_T *qspi_base = (QSPI_T *) NU_MODBASE(obj->qspi);

    // Configure bus clock
    QSPI_SetBusClock(qspi_base, hz);

    // master mode, mode 0, 8-bit data, MSB first
    QSPI_Open(qspi_base,
              QSPI_MASTER,                      // Only support master
              (mode == 0) ? QSPI_MODE_0 : 
              (mode == 1) ? QSPI_MODE_1 : 
              (mode == 2) ? QSPI_MODE_2 : 
              QSPI_MODE_3,                      // Polarity and phase
              8,                                // 8-bit data word
              QSPI_GetBusClock(qspi_base));     // QSPI bus clock as above
    // NOTE: Assume MSB first.
    QSPI_SET_MSB_FIRST(qspi_base);

    // Don't go auto SS because its behavior doesn't meet QSPI.
    QSPI_DisableAutoSS(qspi_base);

    // Assert/de-assert SS manually for explicit behavior. This will change pin function back to GPIO.
    gpio_init_out_ex(&obj->ssel, obj->pin_ssel, 1);

    return QSPI_STATUS_OK;
}

qspi_status_t qspi_free(qspi_t *obj)
{
    // Free SS GPIO object
    gpio_free(&obj->ssel);

    // IP base address
    QSPI_T *qspi_base = (QSPI_T *) NU_MODBASE(obj->qspi);

    QSPI_Close(qspi_base);

    const struct nu_modinit_s *modinit = get_modinit(obj->qspi, qspi_modinit_tab);
    MBED_ASSERT(modinit != NULL);
    MBED_ASSERT(modinit->modname == (int) obj->qspi);

    QSPI_DisableInt(((QSPI_T *) NU_MODBASE(obj->qspi)), (QSPI_FIFO_RXOV_INT_MASK | QSPI_FIFO_RXTH_INT_MASK | QSPI_FIFO_TXTH_INT_MASK));
    NVIC_DisableIRQ(modinit->irq_n);

    // Disable IP clock
    CLK_DisableModuleClock(modinit->clkidx);

    // Mark this module to be deinited.
    int i = modinit - qspi_modinit_tab;
    qspi_modinit_mask &= ~(1 << i);

    // Free up pins
    gpio_set(obj->pin_data0);
    gpio_set(obj->pin_data1);
    gpio_set(obj->pin_data2);
    gpio_set(obj->pin_data3);
    gpio_set(obj->pin_sclk);
    gpio_set(obj->pin_ssel);
    obj->pin_data0 = NC;
    obj->pin_data1 = NC;
    obj->pin_data2 = NC;
    obj->pin_data3 = NC;
    obj->pin_sclk = NC;
    obj->pin_ssel = NC;

    return QSPI_STATUS_OK;
}

qspi_status_t qspi_frequency(qspi_t *obj, int hz)
{
    QSPI_T *qspi_base = (QSPI_T *) NU_MODBASE(obj->qspi);

    QSPI_DISABLE_SYNC(qspi_base);

    QSPI_SetBusClock(qspi_base, hz);

    return QSPI_STATUS_OK;
}

qspi_status_t qspi_write(qspi_t *obj, const qspi_command_t *command, const void *data, size_t *length)
{
    MBED_ASSERT(obj && command && data && length);

    /* Assert SS */
    QSPI_ASSERT_SS(&obj->ssel);

    QSPI_T *qspi_base = (QSPI_T *) NU_MODBASE(obj->qspi);

    /* Enable QSPI */
    QSPI_ENABLE_SYNC(qspi_base);

    /* Write command */
    qspi_status_t status = qspi_write_command(qspi_base, command);
    if (status != QSPI_STATUS_OK) {
        goto clean_up;
    }

    /* Write data */
    /* Switch bus width for following data out */
    status = qspi_switch_bus_width_n_data_direction(qspi_base, command->data.bus_width, false);
    if (status != QSPI_STATUS_OK) {
        goto clean_up;
    }

    /* NOTE: Assume 8-bit data word */
    const uint8_t *data_beg = (const uint8_t *) data;
    const uint8_t *data_ind = data_beg;
    const uint8_t *data_end = data_beg + *length;

    /* Need only tx rmn */
    uint32_t tx_rmn = data_end - data_ind;

    /* Write Tx FIFO to the full */
    uint32_t n;
    while (tx_rmn) {
        n = qspi_transmit(qspi_base, data_ind, tx_rmn, tx_rmn);
        data_ind += n;
        tx_rmn -= n;
    }
    MBED_ASSERT(!tx_rmn);

    /* How many transferred */
    *length = data_ind - data_beg;

clean_up:
    /* Safe return with bus idle and SS de-asserted */

    /* No QSPI bus activity. Necessary to guarantee this QSPI transfer is really completed and the next one is clean. */
    while(QSPI_IS_BUSY(qspi_base));

    /* De-assert SS */
    QSPI_DEASSERT_SS(&obj->ssel);

    return status;
}

qspi_status_t qspi_command_transfer(qspi_t *obj, const qspi_command_t *command, const void *tx_data, size_t tx_size, void *rx_data, size_t rx_size)
{
    qspi_status_t status = QSPI_STATUS_OK;

    /* Assert SS */
    QSPI_ASSERT_SS(&obj->ssel);

    QSPI_T *qspi_base = (QSPI_T *) NU_MODBASE(obj->qspi);

    /* Enable QSPI */
    QSPI_ENABLE_SYNC(qspi_base);

    if ((tx_data == NULL || tx_size == 0) && (rx_data == NULL || rx_size == 0)) {
        /* Write command only */
        status = qspi_write_command(qspi_base, command);
        if (status != QSPI_STATUS_OK) {
            goto clean_up;
        }
    } else {
        if (tx_data != NULL && tx_size) {
            size_t tx_length = tx_size;
            status = qspi_write(obj, command, tx_data, &tx_length);
            if (status != QSPI_STATUS_OK) {
                goto clean_up;
            }
        }

        if (rx_data != NULL && rx_size) {
            size_t rx_length = rx_size;
            status = qspi_read(obj, command, rx_data, &rx_length);
            if (status != QSPI_STATUS_OK) {
                goto clean_up;
            }
        }
    }

clean_up:
    /* Safe return with bus idle and SS de-asserted */

    /* No QSPI bus activity. Necessary to guarantee this QSPI transfer is really completed and the next one is clean. */
    while(QSPI_IS_BUSY(qspi_base));

    /* De-assert SS */
    QSPI_DEASSERT_SS(&obj->ssel);
    
    return status;
}

qspi_status_t qspi_read(qspi_t *obj, const qspi_command_t *command, void *data, size_t *length)
{
    MBED_ASSERT(obj && command && data && length);

    /* Assert SS */
    QSPI_ASSERT_SS(&obj->ssel);

    QSPI_T *qspi_base = (QSPI_T *) NU_MODBASE(obj->qspi);

    /* Enable QSPI */
    QSPI_ENABLE_SYNC(qspi_base);

    /* Write command */
    qspi_status_t status = qspi_write_command(qspi_base, command);
    if (status != QSPI_STATUS_OK) {
        goto clean_up;
    }

    /* Read data */
    /* Switch bus width for following data in */
    status = qspi_switch_bus_width_n_data_direction(qspi_base, command->data.bus_width, true);
    if (status != QSPI_STATUS_OK) {
        goto clean_up;
    }

    /* No QSPI bus activity */
    while(QSPI_IS_BUSY(qspi_base));

    /* Clear RX FIFO */
    QSPI_ClearRxFIFO(qspi_base);

    /* NOTE: Assume 8-bit data word */
    uint8_t *data_beg = (uint8_t *) data;
    uint8_t *data_ind = data_beg;
    uint8_t *data_end = data_beg + *length;

    /* Need separate tx/rx rmn */
    uint32_t tx_rmn = data_end - data_ind;
    uint32_t rx_rmn = tx_rmn;

    /* To minimize tx/rx FIFO latency, try with just half the FIFO size first and continue with remaining. */
    uint32_t n = qspi_fifo_depth(qspi_base);
    while (rx_rmn) {
        n = NU_MIN(tx_rmn, n);
        n = qspi_transmit(qspi_base, NULL, 0, n);
        tx_rmn -= n;
        n = qspi_receive(qspi_base, data_ind, rx_rmn, rx_rmn);
        data_ind += n;
        rx_rmn -= n;
    }
    MBED_ASSERT(!tx_rmn && !rx_rmn);

    /* How many transferred */
    *length = data_ind - data_beg;

clean_up:
    /* Safe return with bus idle and SS de-asserted */

    /* No QSPI bus activity. Necessary to guarantee this QSPI transfer is really completed and the next one is clean. */
    while(QSPI_IS_BUSY(qspi_base));

    /* De-assert SS */
    QSPI_DEASSERT_SS(&obj->ssel);

    return status;
}
